feat: criando handler para interpretar os erros